Fixed bug with logo being cut off on home screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,3 @@
 .h-100 {
     height: 100%;
 }
-
-.vh-100 {
-    height: 100vh;
-}
